# git-releaser

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: push.yml  release.yml
src/: changelog_gen.rs  cli.rs  commit.rs  git.rs  github.rs  main.rs  update_version.rs  version_file.rs
