[package]
name = "git-releaser"
version = "0.2.1-0"
authors = ["Egill Sveinbjörnsson <egillsveinbjorns@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.2.1", features = ["derive"] }
semver = "1.0.10"
chrono = "0.4.19"
eyre = "0.6.8"
log = "0.4.17"
env_logger = "0.9.0"
dialoguer = "0.10.1"
hubcaps = "0.6.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
toml_edit = "0.14.4"
tokio = { version = "1.19.2", features = ["full"] }
