[package]
name = "git-releaser"
version = "0.2.1-0"
authors = ["Egill Sveinbjörnsson <egillsveinbjorns@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
semver = "1.0.14"
chrono = "0.4.22"
eyre = "0.6.8"
log = "0.4.17"
env_logger = "0.9.1"
dialoguer = "0.10.2"
hubcaps = "0.6.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
toml_edit = "0.14.4"
tokio = { version = "1.21.2", features = ["full"] }
